[gd_scene load_steps=5 format=3 uid="uid://bqtfhvdue2d5"]

[ext_resource type="Script" uid="uid://cgjfl6ukee6m5" path="res://UI/ui.gd" id="1_ry2a8"]
[ext_resource type="Texture2D" uid="uid://bk8y3m22qrrny" path="res://Graphics/UI/bg.png" id="2_b78km"]
[ext_resource type="Texture2D" uid="uid://dkvehj4fajbr8" path="res://Graphics/UI/over.png" id="3_46ef5"]
[ext_resource type="Texture2D" uid="uid://bjn4vh1ex8td0" path="res://Graphics/UI/progress.png" id="4_qvcie"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ry2a8")

[node name="LabelCoin" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="LabelShuriken" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "5"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
texture_under = ExtResource("2_b78km")
texture_over = ExtResource("3_46ef5")
texture_progress = ExtResource("4_qvcie")
